--- a/iTrain/Base.lproj/Main.storyboard
+++ b/iTrain/Base.lproj/Main.storyboard
@@ -160,7 +160,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="gqk-ar-hmw" kind="push" id="DbF-jN-56P"/>
+                                    <segue destination="gqk-ar-hmw" kind="push" identifier="show_selection_detail" id="DbF-jN-56P"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -170,21 +170,25 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Passenger Home" id="V2K-bh-i7e"/>
+                    <connections>
+                        <outlet property="tableView" destination="lip-Ru-wwB" id="Mni-rd-Cm2"/>
+                        <outlet property="view" destination="lip-Ru-wwB" id="uKJ-Dk-Cri"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="csa-n8-erT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1509.5" y="-283.5"/>
+            <point key="canvasLocation" x="1416.5" y="-459.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Passenger Selection View Controller-->
         <scene sceneID="cMg-cp-DYw">
             <objects>
-                <viewController id="gqk-ar-hmw" sceneMemberID="viewController">
+                <viewController id="gqk-ar-hmw" customClass="PassengerSelectionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GAt-FE-5Yf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HIN-Ls-deF">
-                                <rect key="frame" x="166" y="323" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Test 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HIN-Ls-deF">
+                                <rect key="frame" x="120" y="293" width="135" height="82"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -194,10 +198,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="qUb-OL-3tK"/>
+                    <connections>
+                        <outlet property="selection_label" destination="HIN-Ls-deF" id="VEY-JQ-zzL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0l0-cL-y79" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1956" y="-299"/>
+            <point key="canvasLocation" x="1988.5" y="-630.5"/>
         </scene>
         <!--Conductor Home-->
         <scene sceneID="Mef-EI-uIv">
@@ -208,20 +215,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="t1A-r2-0b1" style="IBUITableViewCellStyleDefault" id="R1e-w7-b8z">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="MBN-ik-HdT">
                                 <rect key="frame" x="0.0" y="86" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="R1e-w7-b8z" id="eQX-oH-meh">
-                                    <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MBN-ik-HdT" id="sY0-UM-Qbu">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="t1A-r2-0b1">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
