Updated Conductor VCs

--- a/iTrain/Base.lproj/Main.storyboard
+++ b/iTrain/Base.lproj/Main.storyboard
@@ -179,7 +179,7 @@
         <!--Conductor Home-->
         <scene sceneID="Mef-EI-uIv">
             <objects>
-                <tableViewController id="bw8-Ha-gX3" sceneMemberID="viewController">
+                <tableViewController id="bw8-Ha-gX3" customClass="ConductorTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="gNa-Kt-nEn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
