Updated Staff VCs.

--- a/iTrain/Base.lproj/Main.storyboard
+++ b/iTrain/Base.lproj/Main.storyboard
@@ -360,7 +360,7 @@
         <!--Staff Home-->
         <scene sceneID="vLZ-7y-vuv">
             <objects>
-                <tableViewController id="IhY-CO-vFZ" sceneMemberID="viewController">
+                <tableViewController id="IhY-CO-vFZ" customClass="StaffTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Cqc-ev-f2N">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
